# KuruVoice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: asio_setup.md  code_signing.md  commercial_roadmap_tasks.md  design.md  discord_integration.md  distribution.md  golden_baseline.json  obs_integration.md  preset.md  safety.md  setup_linux.md  setup_macos.md  usage.md  virtual_audio_design.md
examples/: config.example.toml  golden_report.rs  obs_setup.md  perf.rs  voice_report.rs
installer/: kuruvoice.iss
scripts/: package-windows.ps1  sign-windows.ps1  train_voice_model.py
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  voice_character.rs
src/ai/: mod.rs
src/audio/: device.rs  engine.rs  mod.rs  virtual_cable.rs  virtual_mic.rs
src/cli/: args.rs  mod.rs
src/dsp/: auto_gain.rs  biquad.rs  chain.rs  compressor.rs  dc_block.rs  deesser.rs  denoise.rs  eq.rs  fluctuation.rs  formant.rs  harmonic.rs  limiter.rs  meter.rs  mod.rs  noise_gate.rs  pitch_formant.rs  pitch_shift.rs
src/eval/: metrics.rs  mod.rs
src/gui/: dashboard.rs  mod.rs
src/preset/: mod.rs  presets.rs
tests/: config_tests.rs  dsp_tests.rs
tests/corpus/: README.md  generate.py
