[package]
name = "kuruvoice"
version = "0.1.1"
edition = "2021"
description = "KuruVoice - 軽量リアルタイム・イケメンボイスチェンジャー (DSP voice changer with dashboard UI)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kurumonn/KuruVoice"
readme = "README.md"
keywords = ["audio", "voice", "dsp", "realtime", "voicechanger"]
categories = ["multimedia::audio"]

[[bin]]
name = "kuruvoice"
path = "src/main.rs"

[dependencies]
cpal = { version = "0.15", features = [] }
ringbuf = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
hound = "3"
eframe = { version = "0.29", default-features = true }
egui = "0.29"
rustfft = "6"
rubato = "0.14"
ort = { version = "2.0.0-rc.12", optional = true, default-features = false }

[features]
default = []
asio = ["cpal/asio"]
ai = ["dep:ort"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
